push swap not working...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
 	"files.associations": {
-		"complex": "c"
+		"complex": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"bitset": "c",
+		"initializer_list": "c",
+		"iterator": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"utility": "c",
+		"vector": "c",
+		"stack": "c",
+		"__tree": "c",
+		"deque": "c",
+		"list": "c",
+		"map": "c",
+		"queue": "c",
+		"random": "c",
+		"regex": "c",
+		"set": "c"
 	}
 }
