norminette + Free issues + Refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,8 @@
 		"random": "c",
 		"regex": "c",
 		"set": "c"
-	}
+	},
+	"[c]": {
+        "editor.defaultFormatter": "keyhr.42-c-format"
+    }
 }
